--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "backend":"json-server --watch data/db.json",
+    "backend": "json-server --watch data/db.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "body-parser": "^1.20.3",
+    "rollup": "^4.27.2",
     "rxjs": "~7.8.0",
+    "send": "^1.1.0",
+    "serve-static": "^1.16.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
